tests/errors/case_outside.HC
//ERR: case labels are only valid directly inside a switch
case 3: "x\n";
